--- a/index.html
+++ b/index.html
@@ -7,7 +7,65 @@
 </head>
 <link rel="stylesheet" href="css/style.css">
 <body>
-<h1>Hello welcome!!!!!</h1>
-<p>This is fun</p>
+  <div class="group1">
+    <h1>Welcome to Me! Jo Jenkins</h1>
+    <h2> Major: Art, Medium: Photography </h2>
+    <h3>Associates: Las Positas College 2023, Undergrad: UC Irvine 2025</h3>
+    <img class= me
+    src="media/images/DSC_0951.jpg" alt="">
+    <p> Hi, my name is Jo! I am originally from The Central Valley here in California, however
+        I moved to Kingston, Jamaica when I was about 17 and moved to Albany, New York after that. 
+    I recently moved back to California to attend UC Irvine. I'm a first year transfer studying art. 
+    My photographer alias is PhoJOgrapher and I have been shooting for 7 years! I love to do editorial photography 
+    and landscape photography.
+    </p>
+    
+    <h1> My Favorite Image</h1>
+    <h2>IT Girl, Digital Photography, Nikon Z6, 2022 </h2>
+    <img class= she 
+    src="media/images/4-DSC_2831.JPG" alt="">
+</div>
+
+
+
+<div class="group2"> 
+    <H1>Favorite Website</H1>
+    <img class=league 
+    src="media/images/Homepage_World_1.jpg" alt="">
+  <div class="container">
+   
+    <a href="https://universe.leagueoflegends.com/en_US/">
+    <button type="button">Click Me!</button>
+</a>
+</div>
+<h3>In my freetime I play a lot of League of Legends, I enjoy reading the lore and watching Arcane.  </h3>
+
+
+
+
+
+
+    <h1>Hobbies</h1>
+   <div class="container2"
+    <ul class="myUL">
+        <li>Traveling</li>
+        <li>Video Games</li>
+        <li>Crocheting</li>
+    </ul>
+    </div>
+<h1> Favorite Movies </h1>
+<div class="container2"> 
+<ol type="1">
+    <li>Spirited Away 2001</li>
+    <li>IT 1986, Stephen King</li>
+   <li>How The Grinch Stole Chistmas 2000</li> 
+
+
+
+</ol>
+</div>
+</div> 
+
+<a href=""></a>
 </body>
 </html>
